# apiary-benchmark

./: README.md  apiary-benchmark.cabal
results/2/: pkg.txt  result.md
scripts/: all.sh
src/: apiary.hs  servant.hs
