name:                apiary-benchmark
version:             0.1.0
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  bench.sh
                   , all.sh
                   , average.awk
                   , stdev.awk
cabal-version:       >=1.10

flag apiary
  default: True
flag servant
  default: True
flag scotty
  default: True
flag Spock
  default: True
flag yesod-core
  default: True

executable apiary
  main-is:             apiary.hs
  if flag(apiary)
    build-depends:       base >=4.7 && <5
                       , apiary >=1
                       , transformers
                       , warp
                       , bytestring
    buildable: True
  else
    buildable: False
  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

executable servant
  main-is:             servant.hs
  if flag(servant)
    build-depends:       base >=4.7 && <5
                       , servant == 0.4.*
                       , servant-server == 0.4.*
                       , http-media
                       , transformers
                       , text
                       , warp
                       , bytestring
    buildable: True
  else
    buildable: False
  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

executable scotty
  main-is:             scotty.hs
  if flag(scotty)
    build-depends:       base >=4.7 && <5
                       , scotty >=0.9
                       , warp
                       , bytestring
    buildable: True
  else
    buildable: False

  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

executable Spock
  main-is:             Spock.hs
  if flag(Spock)
    build-depends:       base >=4.7 && <5
                       , Spock >=0.7.0
                       , warp
                       , text
                       , bytestring
    buildable: True
  else
    buildable: False
  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

executable yesod-core
  main-is:             yesod.hs
  if flag(yesod-core)
    build-depends:       base >=4.7 && <5
                       , yesod-core >= 1.4.2
                       , warp
                       , transformers
                       , text
                       , bytestring
                       , resourcet
                       , wai
                       , http-types
                       , blaze-builder
    buildable: True
  else
    buildable: False
  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010
